--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #333;
@@ -18,4 +17,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  font-size: 16px;
+}
+
+@media only screen and (min-width: 960px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-device-width: 480px) {
+  html {
+    font-size: 14px;
+  }
 }
