--- a/src/index.css
+++ b/src/index.css
@@ -29,19 +29,19 @@ html {
   }
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   html {
     font-size: 14px;
   }
 }
 
-@media only screen and (max-device-width: 400px) {
+@media only screen and (max-width: 400px) {
   html {
     font-size: 12px;
   }
 }
 
-@media only screen and (max-device-width: 380px) {
+@media only screen and (max-width: 380px) {
   html {
     font-size: 10px;
   }
